src/objects/Form_Submission_Document__c.object
<CustomObject>
    <fields>
        <fullName>Bin__c</fullName>
        <description>Astrum PM Bin</description>
        <label>Bin</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Conduit Run and Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Submitted Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice at Start of Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel and Inverter Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Warranty Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Notice to Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Equip. Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Bin__c</controllingField>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Output Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Detail Photos: Clearance, Pitch, Clamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB Panel, Interconnect, Disconnect Box Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning and Production Verification Checklists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Certificate/Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit (Roof, Interior, Exterior) Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit Run and Layout - Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Materials Photo (NRG only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Drawings</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Design__c</fullName>
        <label>Form Design</label>
        <referenceTo>Form_Design__c</referenceTo>
        <relationshipLabel>Form Submission Documents</relationshipLabel>
        <relationshipName>Form_Submission_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Form Submission Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Submission Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>